# instruction-matcher

./: README.md  dash_app.py  main.py  pyproject.toml  streamlit_app.py
instruction_matcher/: __init__.py  callout.py  cli.py  clustering.py  models.py  ocr.py  orientation.py  pipeline.py  utils.py
